# musicvis

./: CMakeLists.txt  README.MD  build.sh  fixed_main.cpp  fixerr.sh  installdeps.sh  prep.sh  pulse.sh  troubleshoot.sh  verify.sh
include/analysis/: beat_detector.h  fft_analyzer.h
include/audio/: audio_buffer.h  audio_manager.h
include/input/: input_handler.h
include/render/: render_engine.h  shader_manager.h
include/visualization/: bar_visualizer.h  particle_visualizer.h  visualization_manager.h  visualizer.h  wave_visualizer.h
src/: main.cpp
src/analysis/: beat_detector.cpp  fft_analyzer.cpp
src/audio/: audio_buffer.cpp  audio_manager.cpp
src/input/: input_handler.cpp
src/render/: render_engine.cpp  render_engine.cpp.bak  shader_manager.cpp
src/visualization/: bar_visualizer.cpp  particle_visualizer.cpp  visualization_manager.cpp  visualizer.cpp  wave_visualizer.cpp
